testing/invalid_lex/lex04.java
class Main {
    static String "Baf\000"
}
